--- a/BCC_MVC/Views/Home/Index.cshtml
+++ b/BCC_MVC/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+@Model = Movie; 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <ul>
+        @foreach(var listing in Model.Movies)
+        {
+            <li>listing.Title</li>
+        }
+    </ul>
 </div>
