--- a/BCC_MVC/Views/MovieListing/MovieListings.cshtml
+++ b/BCC_MVC/Views/MovieListing/MovieListings.cshtml
@@ -1,7 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @model MovieListings;
+
+<div>
+    <a class="nav-link button" asp-controller="MovieListing" asp-action="NewListingPage">New Listing</a>
+    
+</div>
 <div class="text-center">
     <h3>Movie Listingssssssss</h3>
     <ul>
