--- a/BCC_MVC/Views/MovieListing/_NewListingPage.cshtml
+++ b/BCC_MVC/Views/MovieListing/_NewListingPage.cshtml
@@ -5,20 +5,24 @@
 <h3>Add New Movie Listing</h3>
 @using (Html.BeginForm("NewListing", "MovieListing", FormMethod.Post, new { id = "new-listing-form" }))
 {
-<table>
-    <tr>
-        <td>Movie Title:</td>
-        <td>@Html.TextAreaFor(x => x.Title)</td>
-    </tr>
-    <tr>
-        <td>Description:</td>
-        <td>@Html.TextAreaFor(x => x.Description)</td>
-    </tr>
-    <tr>
-        <td>Movie Thumbnail:</td>
-        <td>@Html.TextAreaFor(x => x.ThumbnailRef)</td>
-    </tr>
-</table>
+    <table>
+        <tr>
+            <td>Movie Title:</td>
+            <td>@Html.TextAreaFor(x => x.Title)</td>
+        </tr>
+        <tr>
+            <td>Description:</td>
+            <td>@Html.TextAreaFor(x => x.Description)</td>
+        </tr>
+        <tr>
+            <td>Movie Thumbnail:</td>
+            <td>@Html.TextAreaFor(x => x.ThumbnailRef)</td>
+        </tr>
+    </table>
+    <button type="submit">Add Listing</button>
+    <button type="reset">Clear</button>
+    <button onclick="location.href = '@Url.Action("MovieListings", "MovieListing")';return false;">Cancel</button>
     
+
 }
 
