--- a/BCC_MVC/Views/MovieListing/MovieListings.cshtml
+++ b/BCC_MVC/Views/MovieListing/MovieListings.cshtml
@@ -10,7 +10,7 @@
     <ul>
         @{ foreach (var movie in Model.Listings)
             {
-                <li>@movie.Title</li>
+                <li id="@movie.Id" class="movie-info-item">@movie.Title</li>
             }
         }
 
@@ -18,3 +18,6 @@
 </div>
 
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
