--- a/BCC_MVC/Views/MovieListing/MovieInfo.cshtml
+++ b/BCC_MVC/Views/MovieListing/MovieInfo.cshtml
@@ -1,7 +1,13 @@
 ﻿@model Movie;
 
 <div class="text-center">
-    <h3>@Model.Title</h3>
+    <table>
+        <tr>
+            <td>Title:</td>
+            <td>@Model.Title</td>
+        </tr>
+
+    </table>
     <h3>@Model.Description</h3>
     <h3>@Model.ThumbnailRef</h3>
 </div>
