--- a/BCC_MVC/Views/MovieListing/MovieListings.cshtml
+++ b/BCC_MVC/Views/MovieListing/MovieListings.cshtml
@@ -10,7 +10,7 @@
 
     </div>
     <div class="text-center">
-        <h3>Movie Listingssssssss</h3>
+        <h3>Movie Listings</h3>
         <ul>
             @{ foreach (var movie in Model.Listings)
                 {
